tests/parsing/smtlib/v2.6/errors/150_function_def_bad_return_sort_1.expected
File "tests/parsing/smtlib/v2.6/errors/150_function_def_bad_return_sort_1.smt2", line 2, character 23-24:
2 | (define-fun-rec foo () _)
                           ^
Error while parsing a function definition, read the reserved word '_',
      but expected a sort for the return type of the function.
